# MyBrowser

./: .gitIgnore  CMakeLists.txt  imgui.ini
src/: main.cpp
src/browser/: Browser.cpp  Browser.hpp  Page.cpp  Page.hpp
src/dom/: DOMDocument.cpp  DOMDocument.hpp  DOMElement.cpp  DOMElement.hpp
src/layout/: LayoutEngine.cpp  LayoutEngine.hpp  LayoutTree.cpp
src/net/: HTTPClient.cpp  HTTPClient.hpp
src/parser/: Attribute.hpp  CommentParser.cpp  CommentParser.hpp  DOMNode.cpp  DOMNode.hpp  DoctypeParser.cpp  DoctypeParser.hpp  HTMLLexer.cpp  HTMLLexer.hpp  HTMLParser.cpp  HTMLParser.hpp  ParserContext.cpp  ParserContext.hpp  TagParser.cpp  TagParser.hpp  TextParser.cpp  TextParser.hpp  Token.hpp  TokenType.hpp  VoidElements.hpp
src/ui/: BrowserUI.cpp  BrowserUI.hpp
src/util/: StringUtil.cpp
tests/src/parser/: test_DOMNode.cpp  test_DoctypeParser.cpp  test_HTMLLexer.cpp
